# cans

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  Pipfile  README.md  bootstrap  cans  docker-compose.yml  initialize  main.py  requirements-dev.txt  run_alpha_demo  run_client_tests  run_demo  run_full_test_suite  run_integration_tests  run_spammer  run_tests
client/: client.py  models.py  requirements.txt  setup.cfg  setup.py
client/database_manager_client/: __init__.py
client/e2e_encryption/: __init__.py
client/key_manager/: __init__.py
client/osal/: __init__.py
client/session_manager_client/: __init__.py
client/src/cans_client/: __init__.py  database_manager_client.py  e2e_encryption.py  models.py  session_manager_client.py  sessions_state_machine.py  spammer_client.py  startup.py
client/src/client/: __init__.py  __main__.py  backup_files.py  database_manager_client.py  database_models.py  e2e_encryption.py  echo_client.py  key_manager.py  models.py  osal.py  session_manager_client.py  startup.py  (+2 more)
client/tests/: test_backup_files.py  test_database_operations.py  test_malformed_messages.py
client/user_interface/: __init__.py  __main__.py  tile.py  tile_list.py  tiles.py  tiling_managers.py  view.py
server/: server.py  setup.cfg  setup.py
server/connection_listener/: __init__.py
server/database_manager_server/: __init__.py
server/session_manager_server/: __init__.py  client_session.py  session_event.py
server/tests/: test_client_session.py  test_connection_listener.py  test_database_manager_server.py  test_session_manager_server.py
(+242 files in other folders)
