[metadata]
name = cans_client
description = A secure communicator app backend
license = MIT
platforms = unix, linux
classifiers =
    Programming Language :: Python :: 3.8

[options]
packages =
    client
install_requires =
    wheel
    websockets>=10.2
    python-olm
    blessed>=1.19.1
    pycryptodomex>=3.14
    sqlcipher3>=0.4.5
package_dir = =src
python_requires = >=3.8
