[metadata]
name = cans_server
description = A secure communicator app backend
license = MIT
platforms = unix, linux
classifiers =
    Programming Language :: Python :: 3.8

[options]
packages =
    server
install_requires =
    websockets>=10.2
    pycryptodomex>=3.14
package_dir = =src
python_requires = >=3.8
